itemjs va cau truc ban co

--- a/client/index.html
+++ b/client/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     
+
+
+   <script type="text/javascript" src="assets/js/serverScript/chessitems.js"></script>
+    <script type="text/javascript" src="assets/js/serverScript/chessgame.js"></script>
 </body>
 </html>
