--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,8 @@
     
 
 
-   <script type="text/javascript" src="assets/js/serverScript/chessitems.js"></script>
-    <script type="text/javascript" src="assets/js/serverScript/chessgame.js"></script>
+   <script src="assets/js/serverScript/chessitems.js"></script>
+<script src="assets/js/serverScript/ChessGame.js"></script>
+<script src="assets/js/game/ChessGameUI.js"></script>   
 </body>
 </html>
