--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gamecotuong</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cờ Tướng</title>
 </head>
 <body>
-    
 
-
-   <script src="assets/js/serverScript/chessitems.js"></script>
+<script src="assets/js/serverScript/chessitems.js"></script>
 <script src="assets/js/serverScript/ChessGame.js"></script>
-<script src="assets/js/game/ChessGameUI.js"></script>   
+<script src="assets/js/game/ChessGameUI.js"></script>
+
 </body>
 </html>
